--- a/src/Scenery/CMakeLists.txt
+++ b/src/Scenery/CMakeLists.txt
@@ -4,6 +4,8 @@ set(SOURCES
 	SceneryPager.cxx
 	redout.cxx
 	scenery.cxx
+	terrain_stg.cxx
+	terrain_pgt.cxx
 	tilecache.cxx
 	tileentry.cxx
 	tilemgr.cxx
@@ -13,6 +15,9 @@ set(HEADERS
 	SceneryPager.hxx
 	redout.hxx
 	scenery.hxx
+	terrain.hxx
+	terrain_stg.hxx
+	terrain_pgt.hxx
 	tilecache.hxx
 	tileentry.hxx
 	tilemgr.hxx
