--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -38,3 +38,9 @@ endif()
 if (ENABLE_FGQCANVAS)
   add_subdirectory(fgqcanvas)
 endif()
+
+if(ENABLE_DEMCONVERT)
+    if(GDALFOUND)
+        add_subdirectory(demconvert)
+    endif()
+endif()
