--- a/utils/fgelev/CMakeLists.txt
+++ b/utils/fgelev/CMakeLists.txt
@@ -2,6 +2,7 @@ add_executable(fgelev fgelev.cxx)
 
 target_link_libraries(fgelev
 	SimGearScene SimGearCore
+    ${GDAL_LIBRARY}
 )
 
 install(TARGETS fgelev RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
