Terrain abstraction checkpoint
- FGScenery controls the scenegraph
- FGTerrain (abstract base class) implementations handle the
  terrain loading and queries.
- new FGStgTerrain is legacy STG based terrain handler

--- a/src/Scenery/CMakeLists.txt
+++ b/src/Scenery/CMakeLists.txt
@@ -4,6 +4,7 @@ set(SOURCES
 	SceneryPager.cxx
 	redout.cxx
 	scenery.cxx
+	terrain_stg.cxx
 	tilecache.cxx
 	tileentry.cxx
 	tilemgr.cxx
@@ -13,6 +14,7 @@ set(HEADERS
 	SceneryPager.hxx
 	redout.hxx
 	scenery.hxx
+	terrain_stg.hxx
 	tilecache.hxx
 	tileentry.hxx
 	tilemgr.hxx
