--- a/src/Scenery/CMakeLists.txt
+++ b/src/Scenery/CMakeLists.txt
@@ -5,6 +5,7 @@ set(SOURCES
 	redout.cxx
 	scenery.cxx
 	terrain_stg.cxx
+	terrain_spt.cxx
 	tilecache.cxx
 	tileentry.cxx
 	tilemgr.cxx
@@ -14,7 +15,9 @@ set(HEADERS
 	SceneryPager.hxx
 	redout.hxx
 	scenery.hxx
+	terrain.hxx
 	terrain_stg.hxx
+	terrain_spt.hxx
 	tilecache.hxx
 	tileentry.hxx
 	tilemgr.hxx
