GraphicsWindow using Qt5, work-in-progress.
Enable by setting:
	/sim/rendering/graphics-window-qt=1

Known issues with HiDPI scaling of PUI & Canvas, and probably many
other issues besides.

--- a/src/Main/CMakeLists.txt
+++ b/src/Main/CMakeLists.txt
@@ -163,6 +163,7 @@ endif()
 
 if (Qt5Core_FOUND)
     target_link_libraries(fgfs Qt5::Widgets fglauncher)
+    set_property(TARGET fgfs PROPERTY AUTOMOC ON)
 endif()
 
 if(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
