‘Update all aircraft’ UI overlay.
WIP, but basics should be there.

--- a/src/GUI/CMakeLists.txt
+++ b/src/GUI/CMakeLists.txt
@@ -79,6 +79,7 @@ if (HAVE_QT)
                             NoOfficialHangar.ui
                             InstallSceneryDialog.ui
                             EditCustomMPServerDialog.ui
+                            UpdateAllAircraft.ui
                             )
     qt5_add_resources(qrc_sources resources.qrc)
 
