Initial commit of mpserver discovery via DNS

--- a/src/MultiPlayer/CMakeLists.txt
+++ b/src/MultiPlayer/CMakeLists.txt
@@ -3,11 +3,13 @@ include(FlightGearComponent)
 set(SOURCES
 	multiplaymgr.cxx
 	tiny_xdr.cxx
+        MPServerResolver.cxx
 	)
 
 set(HEADERS
 	multiplaymgr.hxx
 	tiny_xdr.hxx
+        MPServerResolver.hxx
 	)
     	
 flightgear_component(MultiPlayer "${SOURCES}" "${HEADERS}")
