--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -30,3 +30,7 @@ endif()
 if(ENABLE_STGMERGE)
     add_subdirectory(stgmerge)
 endif()
+
+if(ENABLE_TRAFFIC)
+    add_subdirectory(traffic)
+endif()
