Expose an entire property tree via WebSockets.
Use a recursive listener to expose a property tree via a WebSocket.
Currently using a JSON-based encoding, will likely change to binary so
please don’t write code using this interface until the encoding
is stable and documented!

--- a/src/Network/http/CMakeLists.txt
+++ b/src/Network/http/CMakeLists.txt
@@ -8,6 +8,7 @@ set(SOURCES
     FlightHistoryUriHandler.cxx
 	PkgUriHandler.cxx
 	RunUriHandler.cxx
+	MirrorPropertyTreeWebsocket.cxx
 	NavdbUriHandler.cxx
 	PropertyChangeWebsocket.cxx
 	PropertyChangeObserver.cxx
@@ -29,6 +30,7 @@ set(HEADERS
 	Websocket.hxx
 	PropertyChangeWebsocket.hxx
 	PropertyChangeObserver.hxx
+	MirrorPropertyTreeWebsocket.hxx
 	jsonprops.hxx
     SimpleDOM.hxx
 	)
