add SSE support for the C compiler (gcc and clang)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -342,7 +342,8 @@ if(CMAKE_COMPILER_IS_GNUCXX)
 
     if(ENABLE_SIMD)
       if (X86 OR X86_64)
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -msse3 -mfpmath=sse")
+        set(CMAKE_C_FLAGS "${CMAKE_CXX_FLAGS} -O3 -msse3 -mfpmath=sse")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -msse3 -mfpmath=sse")
       endif()
     endif()
 endif(CMAKE_COMPILER_IS_GNUCXX)
@@ -371,7 +372,7 @@ endif()
 if(WIN32)
 
     if(MSVC)
-        set(MSVC_FLAGS "-DNOMINMAX -D_USE_MATH_DEFINES -D_CRT_SECURE_NO_WARNINGS -D_SCL_SECURE_NO_WARNINGS -D__CRT_NONSTDC_NO_WARNINGS /MP /Ox")
+        set(MSVC_FLAGS "-DNOMINMAX -D_USE_MATH_DEFINES -D_CRT_SECURE_NO_WARNINGS -D_SCL_SECURE_NO_WARNINGS -D__CRT_NONSTDC_NO_WARNINGS /MP /O2")
         if(ENABLE_SIMD)
           if (X86)
             set(MSVC_FLAGS "${MSVC_FLAGS} /arch:SSE /arch:SSE2")
