Abandon FGQCanvas build if QtWebSockets is missing.
Should avoid build pain for people with older Qt5 installs or who
don’t have the web-sockets development package available.

--- a/utils/fgqcanvas/CMakeLists.txt
+++ b/utils/fgqcanvas/CMakeLists.txt
@@ -4,7 +4,13 @@ set(CMAKE_CXX_STANDARD_REQUIRED YES)
 
 project(FGQCanvas)
 
-find_package(Qt5 5.3 REQUIRED COMPONENTS Widgets WebSockets)
+find_package(Qt5 5.3 COMPONENTS Widgets WebSockets)
+
+if (NOT Qt5WebSockets_FOUND)
+  message(WARNING "FGQCanvas utility requested, but QtWebSockets not found")
+  message(STATUS "Check you have the development package for Qt5 WebSockets installed")
+  return()
+endif()
 
 set(SOURCES
   temporarywidget.cpp
