Add the top-level options.xml and Translations directory moved out of FGData
Copy them to ${CMAKE_INSTALL_PREFIX}/share/flightgear at installation time.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -459,6 +459,8 @@ add_subdirectory(3rdparty)
 add_subdirectory(utils)
 add_subdirectory(src)
 add_subdirectory(man)
+install(DIRECTORY Translations DESTINATION share/flightgear)
+install(FILES options.xml DESTINATION share/flightgear)
 
 #-----------------------------------------------------------------------------
 ### uninstall target
