Make the FG installation prefix available to C++ code via config.h
CMAKE_INSTALL_PREFIX is now available as FG_INSTALL_PREFIX from
config.h.

--- a/src/Include/config_cmake.h.in
+++ b/src/Include/config_cmake.h.in
@@ -33,6 +33,7 @@
 #cmakedefine ENABLE_JSBSIM
 
 #define PKGLIBDIR "@FG_DATA_DIR@"
+#define FG_INSTALL_PREFIX "@CMAKE_INSTALL_PREFIX@"
 #define WEB_BROWSER "@WEB_BROWSER@"
 
 // Ensure FG_HAVE_xxx always have a value
