--- a/src/Include/config_cmake.h.in
+++ b/src/Include/config_cmake.h.in
@@ -3,6 +3,7 @@
 #cmakedefine FG_NDEBUG
 #cmakedefine FG_NIGHTLY
 
+#cmakedefine ENABLE_SIMD
 #cmakedefine ENABLE_SP_FDM
 #cmakedefine JSBSIM_USE_GROUNDREACTIONS
 
