Move SIMD flags to CMAKE_CXX_FLAGS_RELEASE and fix a typo in the process

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,8 @@ if(COMMAND cmake_policy)
    endif()
 endif()
 
+message("CMAKE Build type: ${CMAKE_BUILD_TYPE}")
+
 if(APPLE)
 	set(CMAKE_INSTALL_RPATH "@loader_path/../Frameworks")
 	# when building, don't use the install RPATH already
@@ -358,8 +360,8 @@ if(CMAKE_COMPILER_IS_GNUCXX)
 
     if(ENABLE_SIMD)
       if (X86 OR X86_64)
-        set(CMAKE_C_FLAGS "${CMAKE_CXX_FLAGS} -O3 -msse2 -mfpmath=sse")
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -msse2 -mfpmath=sse")
+        set(CMAKE_C_FLAGS_RELEASE "-O3 -msse2 -mfpmath=sse")
+        set(CMAKE_CXX_FLAGS_RELEASE "-O3 -msse2 -mfpmath=sse")
       endif()
     endif()
 endif(CMAKE_COMPILER_IS_GNUCXX)
@@ -391,7 +393,11 @@ if(WIN32)
         set(MSVC_FLAGS "-DNOMINMAX -D_USE_MATH_DEFINES -D_CRT_SECURE_NO_WARNINGS -D_SCL_SECURE_NO_WARNINGS -D__CRT_NONSTDC_NO_WARNINGS /MP /O2")
         if(ENABLE_SIMD)
           if (X86)
-            set(MSVC_FLAGS "${MSVC_FLAGS} /arch:SSE /arch:SSE2")
+            SET(CMAKE_C_FLAGS_RELEASE "/O2 /arch:SSE /arch:SSE2")
+            SET(CMAKE_CXX_FLAGS_RELEASE "/O2 /arch:SSE /arch:SSE2")
+          else()
+            SET(CMAKE_C_FLAGS_RELEASE "/O2")
+            SET(CMAKE_CXX_FLAGS_RELEASE "/O2")
           endif()
         endif()
 
