Update .desktop files to show the launcher
Suggested by Emilian, I assumed packagers tend to replace these files
or make their own decision anyway but for a non-terminal startup,
requesting the launcher seems a clear benefit to me.

--- a/package/RedHat/flightgear.desktop
+++ b/package/RedHat/flightgear.desktop
@@ -3,6 +3,6 @@ Encoding=UTF-8
 Type=Application
 Name=FlightGear
 Comment=FlightGear Flight Simulator
-Exec=fgfs
+Exec=fgfs --launcher
 Icon=flightgear
 Categories=Game;Simulation
